RESOLVED FIXED123218
Fix assertion in DatabaseManager::detailsForNameAndOrigin() to be iOS friendly.
https://bugs.webkit.org/show_bug.cgi?id=123218
Summary Fix assertion in DatabaseManager::detailsForNameAndOrigin() to be iOS friendly.
Mark Lam
Reported 2013-10-23 13:45:57 PDT
Follow up to https://bugs.webkit.org/show_bug.cgi?id=123131 to make an assertion in DatabaseManager::detailsForNameAndOrigin() friendly to iOS. Patch coming soon.
Attachments
the patch. (1.37 KB, patch)
2013-10-23 13:48 PDT, Mark Lam
joepeck: review+
Mark Lam
Comment 1 2013-10-23 13:48:40 PDT
Created attachment 214991 [details] the patch.
Joseph Pecoraro
Comment 2 2013-10-23 14:00:00 PDT
Comment on attachment 214991 [details] the patch. r=me
Mark Lam
Comment 3 2013-10-23 14:04:20 PDT
Thanks for the review. Landed in r157885: <http://trac.webkit.org/r157885>.
Note You need to log in before you can comment on or make changes to this bug.