Fix assertion in DatabaseManager::detailsForNameAndOrigin() to be iOS friendly. https://bugs.webkit.org/show_bug.cgi?id=123218.

Reviewed by Joseph Pecoraro.

No new tests.

* Modules/webdatabase/DatabaseManager.cpp:
(WebCore::DatabaseManager::detailsForNameAndOrigin):



Canonical link: https://commits.webkit.org/141328@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157885 268f45cc-cd09-0410-ab3c-d52691b4dbfc